--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: parameters_platform.php }
     - { resource: phpcr.yml }
     - { resource: security.yml }
 
