--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -12,8 +12,6 @@ build:
     flavor: drupal
 
 # The build-time dependencies of the app.
-# Note: Drush 7.0.0 (stable) is released, but it purposefully does not work
-# with Drupal 8.
 dependencies:
     php:
         "drush/drush": "8.0.0-beta12"
@@ -43,14 +41,12 @@ mounts:
     "/tmp": "shared:files/tmp"
     "/config": "shared:files/config"
     "/private": "shared:files/private"
+    "/drush-backups": "shared:files/drush-backups"
 
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
     # We run deploy hook after your application has been deployed and started.
     deploy: |
-      # Drupal 8 currently fails to create config directories
-      # automatically during install.
-      mkdir -p config/active config/staging
       cd public
       drush -y updatedb
 
