--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -44,11 +44,8 @@ mounts:
 
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
-    # We run deploy hook after your application has been deployed and started.
+    # We run deploy hooks after your application has been deployed and started.
     deploy: |
-      # Drupal 8 currently fails to create config directories
-      # automatically during install.
-      mkdir -p config/active config/staging
       cd public
       drush -y updatedb
 
